force-app/main/default/objects/StockOut__c/StockOut__c.object-meta.xml
<CustomObject>
    <label>Stock Out</label>
    <nameField>
        <displayFormat>SO - {00000}</displayFormat>
        <label>Stock Out</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>