force-app/main/default/objects/StockOut__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>Haravan_Order_item__c</referenceTo>
    <relationshipLabel>Stock Out</relationshipLabel>
    <relationshipName>Stock_Out</relationshipName>
    <type>Lookup</type>
</CustomField>