force-app/main/default/objects/StockOut__c/fields/Product_Variant__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant__c</fullName>
    <label>Product Variant</label>
    <referenceTo>HaravanProductVariant__c</referenceTo>
    <relationshipLabel>Stock Out</relationshipLabel>
    <relationshipName>Stock_Out</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>